dist_man1_MANS=

if BUILD_MYTHERRAD
  dist_man1_MANS+=mytherrad.1
endif

if ENABLE_QT
  dist_man1_MANS+=mytherra-qt.1
endif

if BUILD_MYTHERRA_CLI
  dist_man1_MANS+=mytherra-cli.1
endif

if BUILD_MYTHERRA_TX
  dist_man1_MANS+=mytherra-tx.1
endif

if BUILD_MYTHERRA_UTIL
  dist_man1_MANS+=mytherra-util.1
endif

if ENABLE_WALLET
if BUILD_MYTHERRA_WALLET
  dist_man1_MANS+=mytherra-wallet.1
endif
endif
